# pyobjdetect

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  default-logging.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.gitlab/issue_templates/: default.md
.gitlab/merge_request_templates/: default.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
pyobjdetect/: __init__.py  cli.py
pyobjdetect/dataloaders/: pennfundan.py
pyobjdetect/dataset/: pennfundan.py
pyobjdetect/model/: demomodel.py  transfermodel.py
pyobjdetect/models/: demomodel.py
pyobjdetect/pytorch_reference_detection/: coco_eval.py  coco_utils.py
pyobjdetect/transform/: base.py
pyobjdetect/utils/: helpers.py  logutils.py  misc.py  viz.py
scripts/: build.sh  clean.sh  env.sh  log-env-variables.sh
tests/: __init__.py  test_pyobjdetect.py
